--- a/schimbCadou/static/css/base_style.css
+++ b/schimbCadou/static/css/base_style.css
@@ -1,15 +1,26 @@
-html, body{
+html {
     height: 100%;
 }
+
+body {
+    height: 100%;
+    background-image: url('/static/images/background.png');
+    background-size: cover; /* Acoperă întreaga pagină */
+    background-position: center; /* Centrat */
+    background-repeat: no-repeat; /* Nu se repetă */
+}
+
 .wrapper {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
-.content{
+
+.content {
     flex: 1;
 }
-.footer{
-    background-color: #f8f9fa;
+
+.footer {
+    background-color: #f8faf8;
     padding: 10px 0;
 }
