--- a/schimbCadou/templates/media_carousel.html
+++ b/schimbCadou/templates/media_carousel.html
@@ -1,22 +1,18 @@
-{% load static %}
-<div id="carouselExample" class="carousel slide">
-    <div class="carousel-inner">
-        {% for image_url in image_urls %}
-            <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                <img src="{{ image_url }}" class="d-block w-100" alt="...">
+
+    <div id="mediaCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            {% for product in products %}
+            <div class="carousel-item {% if forloop.first %} active {% endif %}">
+                <img src="{{ product.product_picture.url }}" class="d-block w-100" alt="Image">
             </div>
-        {% empty %}
-            <div class="carousel-item active">
-                <img src="{% static 'images/img.png' %}" class="d-block w-100" alt="No images available">
-            </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-slide="prev" data-bs-target="#mediaCarousel">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only" style="color: black">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-slide="next" data-bs-target="#mediaCarousel">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only" style="color: black">Next</span>
+        </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>
