--- a/schimbCadou/templates/registration/password_change_done.html
+++ b/schimbCadou/templates/registration/password_change_done.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<!-- templates/registration/password_change_done.html -->
+{% extends "base.html" %}
+{% block title %}Password Change Successful{% endblock title %}
+{% block content %}
+    <h1>Password change successful</h1>
+    <p>Your password was changed.</p>
+{% endblock content %}
