--- a/schimbCadou/templates/registration/password_change_form.html
+++ b/schimbCadou/templates/registration/password_change_form.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<!-- templates/registration/password_change_form.html -->
+{% extends "base.html" %}
+{% load crispy_forms_tags %}
+{% load crispy_forms_filters %}
+{% block title %}Password Change{% endblock title %}
+{% block content %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Password change</h1>
+                <p>Please enter your old password, for security's sake, and then enter
+                    your new password twice so we can verify you typed it in correctly.</p>
+                <form method="POST">{% csrf_token %}
+                    {{ form|crispy }}
+                    <input class="btn btn-success" type="submit"
+                           value="Change my password">
+                </form>
+            </div>
+        </div>
+    </div>
+{% endblock content %}
