--- a/schimbCadou/templates/registration/password_reset_confirm.html
+++ b/schimbCadou/templates/registration/password_reset_confirm.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<!-- templates/registration/password_reset_confirm.html -->
+{% extends "base.html" %}
+{% load crispy_forms_tags %}
+{% load crispy_forms_filters %}
+{% block title %}Enter new password{% endblock title %}
+{% block content %}
+    <h1>Set a new password!</h1>
+    <form method="POST">{% csrf_token %}
+        {{ form|crispy }}
+        <input class="btn btn-success" type="submit" value="Change my password">
+    </form>
+{% endblock content %}
