added report, improved history, change and forgot password

--- a/schimbCadou/templates/home/homepage.html
+++ b/schimbCadou/templates/home/homepage.html
@@ -19,7 +19,7 @@
             {% endif %}
             <div class="col-md-4">
                 {% with products as products %}
-                    <h5 class="text-center" style="color: white">Produse disponibile pe site:</h5>
+                    <h5 class="text-center" style="background-color: navajowhite">Produse disponibile pe site:</h5>
                 {% include 'media_carousel.html' %}
                 {% endwith %}
             </div>
