--- a/schimbCadou/templates/modal.html
+++ b/schimbCadou/templates/modal.html
@@ -42,7 +42,7 @@
                 {% csrf_token %}
                 <div class="modal-body">
                     <input type="hidden" id="buyProductId" name="product_id" value="">
-                    
+
                     <img src="#" id="buyProductPicture" height="200" alt="ProductImage">
                     <br>
                     <label for="buyProductName">Nume:</label>
@@ -64,3 +64,27 @@
     </div>
 </div>
 
+<!-- Modal Report-->
+<div class="modal fade" id="reportModal" tabindex="-1" role="dialog" aria-labelledby="reportModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="reportModalLabel">Te rog sa ne spui despre problema</h5>
+            </div>
+            <form action="{% url 'report-product' %}" method="post">
+                {% csrf_token %}
+                <div class="modal-body">
+                    <input type="hidden" id="reportProductId" name="product" value="">
+                    
+                    <textarea cols="60" rows="10" id="report_comment" name="comment"></textarea>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Raporteaza</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
