--- a/schimbCadou/templates/product/search_results.html
+++ b/schimbCadou/templates/product/search_results.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container-fluid">
         <div class="row">
-            <h4 class="text-center">Rezultatele cautarii dupa termenul "{{ search_criteria }}"</h4>
+            <h4 class="text-center" style="background-color: white">Rezultatele cautarii dupa termenul "{{ search_criteria }}"</h4>
             
             {% include 'categories.html' %}
             
