--- a/schimbCadou/templates/registration/password_change_done.html
+++ b/schimbCadou/templates/registration/password_change_done.html
@@ -2,6 +2,12 @@
 {% extends "base.html" %}
 {% block title %}Password Change Successful{% endblock title %}
 {% block content %}
-    <h1>Password change successful</h1>
-    <p>Your password was changed.</p>
+    <div class="container bg-light">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Password change successful</h1>
+                <p>Your password was changed.</p>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
