--- a/schimbCadou/templates/registration/password_change_form.html
+++ b/schimbCadou/templates/registration/password_change_form.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_filters %}
 {% block title %}Password Change{% endblock title %}
 {% block content %}
-    <div class="container">
+    <div class="container bg-light">
         <div class="row">
             <div class="col-md-12">
                 <h1>Password change</h1>
