--- a/schimbCadou/templates/registration/password_reset_complete.html
+++ b/schimbCadou/templates/registration/password_reset_complete.html
@@ -2,8 +2,14 @@
 {% extends "base.html" %}
 {% block title %}Password reset complete{% endblock title %}
 {% block content %}
-<h1>Password reset complete</h1>
-<p>Your new password has been set.</p>
-<p>You can log in now on the
-<a href="{% url 'login' %}">Log In page</a>.</p>
+    <div class="container bg-light">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Password reset complete</h1>
+                <p>Your new password has been set.</p>
+                <p>You can log in now on the
+                    <a href="{% url 'login' %}">Log In page</a>.</p>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
