--- a/schimbCadou/templates/registration/password_reset_confirm.html
+++ b/schimbCadou/templates/registration/password_reset_confirm.html
@@ -4,9 +4,15 @@
 {% load crispy_forms_filters %}
 {% block title %}Enter new password{% endblock title %}
 {% block content %}
-    <h1>Set a new password!</h1>
-    <form method="POST">{% csrf_token %}
-        {{ form|crispy }}
-        <input class="btn btn-success" type="submit" value="Change my password">
-    </form>
+    <div class="container bg-light">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Set a new password!</h1>
+                <form method="POST">{% csrf_token %}
+                    {{ form|crispy }}
+                    <input class="btn btn-success" type="submit" value="Change my password">
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
