--- a/schimbCadou/templates/registration/password_reset_done.html
+++ b/schimbCadou/templates/registration/password_reset_done.html
@@ -2,7 +2,13 @@
 {% extends "base.html" %}
 {% block title %}Email Sent{% endblock title %}
 {% block content %}
-    <h1>Check your inbox.</h1>
-    <p>We've emailed you instructions for setting your password.
-        You should receive the email shortly!</p>
+    <div class="container bg-light">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Check your inbox.</h1>
+                <p>We've emailed you instructions for setting your password.
+                    You should receive the email shortly!</p>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
