--- a/schimbCadou/templates/registration/password_reset_form.html
+++ b/schimbCadou/templates/registration/password_reset_form.html
@@ -4,12 +4,18 @@
 {% load crispy_forms_filters %}
 {% block title %}Forgot Your Password?{% endblock title %}
 {% block content %}
-    <h1>Forgot your password?</h1>
-    <p>Enter your email address below, and we'll email instructions
-        for setting a new one.</p>
-    <form method="POST">{% csrf_token %}
-        {{ form|crispy }}
-        <input class="btn btn-success" type="submit"
-               value="Send me instructions!">
-    </form>
+    <div class="container bg-light">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Forgot your password?</h1>
+                <p>Enter your email address below, and we'll email instructions
+                    for setting a new one.</p>
+                <form method="POST">{% csrf_token %}
+                    {{ form|crispy }}
+                    <input class="btn btn-success" type="submit"
+                           value="Send me instructions!">
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
