fixed the security alert received from github

--- a/schimbCadou/templates/base.html
+++ b/schimbCadou/templates/base.html
@@ -15,6 +15,13 @@
     {% block content %}{% endblock %}
 </div>
 
+<button onclick="document.documentElement.scrollTop=0" id="backToTopButton" style="position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 100;">
+    Back to top
+</button>
+
 <footer class="footer mt-auto py-3 bg-light text-center">
     <div class="container">
         <span class="text-muted">@Team PythonRemoteRO60</span>
