--- a/schimbCadou/templates/categories.html
+++ b/schimbCadou/templates/categories.html
@@ -1,6 +1,6 @@
 {% load home_extras %}
 <div class="col-md-2">
-    <h6 class="text-center" style="color: white">Categorii de produse</h6>
+    <h6 class="text-center" style="background-color: navajowhite">Categorii de produse</h6>
     <br>
     <ul class="list-group">
         {% for category in categories %}
